; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_wdt.c_ti_wdt_reg_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_wdt.c_ti_wdt_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_wdt_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ti_wdt_softc*, i32)* @ti_wdt_reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ti_wdt_reg_read(%struct.ti_wdt_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ti_wdt_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ti_wdt_softc* %0, %struct.ti_wdt_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ti_wdt_softc*, %struct.ti_wdt_softc** %3, align 8
  %6 = getelementptr inbounds %struct.ti_wdt_softc, %struct.ti_wdt_softc* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.ti_wdt_softc*, %struct.ti_wdt_softc** %3, align 8
  %9 = getelementptr inbounds %struct.ti_wdt_softc, %struct.ti_wdt_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @bus_space_read_4(i32 %7, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @bus_space_read_4(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
